Support soft word breaks in menu titles (#68)
* feat: consider soft word breaks in menu titles

* feat: break long menu titles properly

* test: ensure soft hyphens are rendered properly

--- a/i18n/de.yaml
+++ b/i18n/de.yaml
@@ -20,7 +20,7 @@ sessions_page.room: Raum
 sessions_page.read_more: mehr erfahren
 sessions_page.heading_no_sessions: Noch keine Sessions geplant
 sessions_page.heading_come_back_soon: Schauen Sie bald wieder vorbei oder folgen Sie uns auf Social Media
-menu.code_of_conduct: Verhaltenskodex
+menu.code_of_conduct: Verhaltens&shy;kodex
 menu.about: Über uns
 menu.sessions: Programm
 menu.speakers: Sprecher
